# CatChat

./: .gitignore  CMakeLists.txt  README.md  build.sh
.cache/clangd/index/: Buffer.cpp.F7B91E52479A5ED6.idx  Buffer.hpp.E13D3F178A6A7A28.idx  BufferView.cpp.D930786B36CB511C.idx  BufferView.hpp.93376CC516E256C4.idx  ConnectionHandler.cpp.AE18A5CB903B28BC.idx  ConnectionHandler.hpp.87D20FF76A649CB7.idx  TCPSocket.cpp.326C935864AD59CE.idx  TCPSocket.hpp.474EA47C3DE20181.idx  main.cpp.12B5516D92259907.idx  main.cpp.4E16F7E4B94252FA.idx
CatNet/: CMakeLists.txt
CatNet/include/CatNet/: Buffer.hpp  BufferSnapshot.hpp  BufferView.hpp  Packet.hpp  TCPSocket.hpp
CatNet/include/CatNet/packets/serverbound/: ServerboundLoginPacket.hpp
CatNet/src/: Buffer.cpp  BufferSnapshot.cpp  BufferView.cpp  Packet.cpp  TCPSocket.cpp
CatNet/src/packets/serverbound/: ServerboundLoginPacket.cpp
Client/: CMakeLists.txt
Client/src/: main.cpp
Server/: CMakeLists.txt
Server/src/: CatChatServer.cpp  CatChatServer.hpp  Connection.cpp  Connection.hpp  ConnectionHandler.cpp  ConnectionHandler.hpp  main.cpp  network_loop.cpp  network_loop.hpp
